Add script.js reference before closing body tag

--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
       document.getElementById("reveal").disabled = true;
       document.getElementById("next").disabled = true;
     };
-  </script></body>
+  <script src="script.js"></script>
+</body>
 </html>
